--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,376 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: "Graphik-Regular";
+    src: url("/src/assets/fonts/Graphik-Regular.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Graphik-Semibold";
+    src: url("/src/assets/fonts/Graphik-Semibold.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Graphik-Bold";
+    src: url("/src/assets/fonts/Graphik-Bold.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+  }
+  *,
+  body {
+    @apply font-graphik;
+  }
+  /* Adjust margin to form fields so they aren't cut off on active */
+  textarea,
+  button,
+  input {
+    /* margin-left: 1px;
+    margin-right: 1px; */
+  }
+  textarea,
+  input,
+  button[role="combobox"] {
+    @apply formInput focus:border-primary focus-visible:!ring-0;
+  }
+  input[type="number"] {
+    text-align: left;
+  }
+}
+
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 0 0% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 3.9%;
+    --primary: 0 0% 9%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 0 0% 96.1%;
+    --secondary-foreground: 0 0% 9%;
+    --muted: 0 0% 96.1%;
+    --muted-foreground: 0 0% 45.1%;
+    --accent: 0 0% 96.1%;
+    --accent-foreground: 0 0% 9%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 0 0% 89.8%;
+    --input: 0 0% 89.8%;
+    --ring: 0 0% 3.9%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+    --radius: 0.5rem;
+    --sidebar-background: 0 0% 98%;
+    --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-primary: 240 5.9% 10%;
+    --sidebar-primary-foreground: 0 0% 98%;
+    --sidebar-accent: 240 4.8% 95.9%;
+    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-border: 220 13% 91%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
+    --container-sm-padding: 16px;
+
+    /* Theming Gaply colors */
+    --base-white: rgba(255, 255, 255, 1);
+    --base-black: rgba(10, 14, 21, 1);
+    --grey-50: rgba(249, 250, 251, 1);
+    --grey-100: rgba(243, 244, 246, 1);
+    --grey-200: rgba(229, 231, 235, 1);
+    --grey-300: rgba(209, 213, 219, 1);
+    --grey-400: rgba(156, 163, 175, 1);
+    --grey-500: rgba(107, 114, 128, 1);
+    --grey-600: rgba(75, 85, 99, 1);
+    --grey-700: rgba(55, 65, 81, 1);
+    --grey-800: rgba(31, 41, 55, 1);
+    --grey-900: rgba(17, 24, 39, 1);
+    --grey-950: rgba(3, 7, 18, 1);
+    --blue-50: rgba(239, 249, 255, 1);
+    --blue-100: rgba(222, 242, 255, 1);
+    --blue-200: rgba(182, 230, 255, 1);
+    --blue-300: rgba(118, 211, 255, 1);
+    --blue-400: rgba(45, 190, 255, 1);
+    --blue-500: rgba(2, 166, 245, 1);
+    --blue-600: rgba(0, 132, 210, 1);
+    --blue-700: rgba(0, 106, 170, 1);
+    --blue-800: rgba(0, 84, 132, 1);
+    --blue-900: rgba(7, 73, 115, 1);
+    --blue-950: rgba(4, 47, 77, 1);
+    --green-50: rgba(243, 249, 236, 1);
+    --green-100: rgba(228, 241, 214, 1);
+    --green-200: rgba(204, 228, 178, 1);
+    --green-300: rgba(185, 218, 154, 1);
+    --green-400: rgba(139, 190, 93, 1);
+    --green-500: rgba(108, 163, 63, 1);
+    --green-600: rgba(83, 129, 47, 1);
+    --green-700: rgba(65, 99, 40, 1);
+    --green-800: rgba(54, 80, 36, 1);
+    --green-900: rgba(48, 69, 34, 1);
+    --green-950: rgba(23, 37, 14, 1);
+    --yellow-50: rgba(250, 249, 240, 1);
+    --yellow-100: rgba(241, 239, 212, 1);
+    --yellow-200: rgba(226, 222, 165, 1);
+    --yellow-300: rgba(216, 207, 133, 1);
+    --yellow-400: rgba(201, 183, 86, 1);
+    --yellow-500: rgba(190, 160, 66, 1);
+    --yellow-600: rgba(168, 129, 55, 1);
+    --yellow-700: rgba(140, 99, 49, 1);
+    --yellow-800: rgba(115, 80, 45, 1);
+    --yellow-900: rgba(95, 67, 40, 1);
+    --yellow-950: rgba(54, 36, 18, 1);
+    --orange-50: rgba(254, 244, 242, 1);
+    --orange-100: rgba(255, 230, 225, 1);
+    --orange-200: rgba(255, 210, 200, 1);
+    --orange-300: rgba(255, 183, 167, 1);
+    --orange-400: rgba(253, 134, 108, 1);
+    --orange-500: rgba(245, 95, 62, 1);
+    --orange-600: rgba(226, 67, 32, 1);
+    --orange-700: rgba(190, 53, 23, 1);
+    --orange-800: rgba(157, 47, 23, 1);
+    --orange-900: rgba(130, 45, 26, 1);
+    --orange-950: rgba(71, 19, 8, 1);
+    --purple-50: rgba(250, 245, 255, 1);
+    --purple-100: rgba(243, 232, 255, 1);
+    --purple-200: rgba(234, 212, 255, 1);
+    --purple-300: rgba(215, 175, 255, 1);
+    --purple-400: rgba(194, 130, 254, 1);
+    --purple-500: rgba(170, 83, 249, 1);
+    --purple-600: rgba(150, 49, 236, 1);
+    --purple-700: rgba(128, 32, 208, 1);
+    --purple-800: rgba(109, 31, 170, 1);
+    --purple-900: rgba(89, 27, 136, 1);
+    --purple-950: rgba(60, 6, 101, 1);
+    --warning-50: rgba(255, 254, 234, 1);
+    --warning-100: rgba(255, 252, 197, 1);
+    --warning-200: rgba(255, 249, 134, 1);
+    --warning-300: rgba(255, 239, 71, 1);
+    --warning-400: rgba(255, 225, 29, 1);
+    --warning-500: rgba(245, 188, 2, 1);
+    --warning-600: rgba(224, 151, 0, 1);
+    --warning-700: rgba(186, 107, 3, 1);
+    --warning-800: rgba(150, 82, 10, 1);
+    --warning-900: rgba(124, 68, 11, 1);
+    --warning-950: rgba(71, 35, 1, 1);
+    --error-50: rgba(255, 240, 240, 1);
+    --error-100: rgba(255, 221, 221, 1);
+    --error-200: rgba(255, 193, 193, 1);
+    --error-300: rgba(255, 149, 149, 1);
+    --error-400: rgba(255, 89, 89, 1);
+    --error-500: rgba(255, 37, 37, 1);
+    --error-600: rgba(245, 2, 2, 1);
+    --error-700: rgba(213, 0, 0, 1);
+    --error-800: rgba(176, 4, 4, 1);
+    --error-900: rgba(145, 11, 11, 1);
+    --error-950: rgba(80, 0, 0, 1);
+    --success-50: rgba(238, 255, 244, 1);
+    --success-100: rgba(214, 255, 231, 1);
+    --success-200: rgba(176, 255, 209, 1);
+    --success-300: rgba(114, 255, 174, 1);
+    --success-400: rgba(46, 250, 130, 1);
+    --success-500: rgba(3, 214, 91, 1);
+    --success-600: rgba(0, 190, 76, 1);
+    --success-700: rgba(1, 148, 63, 1);
+    --success-800: rgba(7, 116, 53, 1);
+    --success-900: rgba(8, 95, 47, 1);
+    --success-950: rgba(0, 54, 24, 1);
+
+    /* Manual chart from old code base */
+    --graph-colour-primary: hsl(91, 100%, 17%);
+    --graph-colour-secondary: hsl(91, 46%, 47%);
+    --graph-colour-background: hsl(91, 67%, 69%);
+    --graph2-colour-primary: hsl(265, 80%, 26%);
+    --graph2-colour-secondary: hsl(263, 39%, 46%);
+    --graph2-colour-background: hsl(270, 100%, 84%);
+  }
+  .dark {
+    --background: 0 0% 3.9%;
+    --foreground: 0 0% 98%;
+    --card: 0 0% 3.9%;
+    --card-foreground: 0 0% 98%;
+    --popover: 0 0% 3.9%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 0 0% 98%;
+    --primary-foreground: 0 0% 9%;
+    --secondary: 0 0% 14.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 0 0% 14.9%;
+    --muted-foreground: 0 0% 63.9%;
+    --accent: 0 0% 14.9%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 0 0% 14.9%;
+    --input: 0 0% 14.9%;
+    --ring: 0 0% 83.1%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+    --sidebar-background: 240 5.9% 10%;
+    --sidebar-foreground: 240 4.8% 95.9%;
+    --sidebar-primary: 224.3 76.3% 48%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 240 3.7% 15.9%;
+    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
+  }
+}
+
+@layer utilities {
+  @media (max-width: 1024px) {
+    .min-h-screen-offset {
+      min-height: calc(100dvh - 160px);
+    }
+  }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  /* Forms */
+  .formLabel {
+    @apply font-semibold text-14 text-foreground;
+  }
+  .formInput {
+    @apply h-10 p-2 text-14 text-foreground !shadow-none;
+  }
+  /* .radioButton {
+    @apply actionButton pointer-events-none h-11 text-14 capitalize text-foreground;
+  } */
+
+  /* Change background color when Switch is checked */
+  button[data-state="checked"] span,
+  button[data-state="unchecked"] span {
+    @apply !bg-background-primary-inverse;
+  }
+  button[data-state="checked"] {
+    @apply bg-background-primary;
+  }
+  /* Buttons */
+  /* .actionButton {
+    @apply text-14 text-foreground !shadow-none;
+  } */
+
+  .buttonShadow {
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),
+      0px 1px 2px 0px rgba(0, 0, 0, 0.06);
+  }
+
+  .primaryButton {
+    @apply buttonShadow rounded-full bg-background-primary text-14 text-text-primary-inverse hover:!bg-background-primary-hover active:!bg-background-primary-focus;
+  }
+
+  .secondaryButton {
+    @apply buttonShadow rounded-full !bg-background-secondary text-14 text-text-primary hover:!bg-background-secondary-hover active:bg-background-secondary-focus font-semibold;
+  }
+
+  .destructiveButton {
+    @apply buttonShadow rounded-full !bg-background-error text-14 text-text-primary-inverse hover:!bg-background-error-hover active:bg-background-accent-orange-focus;
+  }
+
+  .outlineButton {
+    @apply buttonShadow rounded-full border border-border-primary text-14 hover:bg-background-secondary-hover hover:text-text-primary active:bg-background-secondary-focus active:text-text-primary;
+  }
+
+  .outlineOnDarkButton {
+    @apply buttonShadow rounded-full border border-border-primary bg-transparent text-14 text-text-primary-inverse hover:bg-background-primary-hover active:bg-background-primary-focus;
+  }
+
+  /*
+  **
+  ** Typography
+  **
+  **
+  */
+  .assessmentTitle {
+    @apply font-bold text-32 leading-10 text-text-primary;
+  }
+
+  .assessmentDescription {
+    @apply text-16 leading-6 text-text-secondary;
+  }
+
+  .pageTitle {
+    @apply font-bold text-32 leading-10 text-text-primary;
+  }
+
+  .pageDescription {
+    @apply text-14 text-muted-foreground;
+  }
+
+  /* Error Screens */
+  .errorScreenHeading {
+    font-size: 200px;
+    line-height: 0.75;
+  }
+  @media only screen and (max-width: 600px) {
+    .errorScreenHeading {
+      font-size: 75px;
+      line-height: 0.75;
+    }
+  }
+
+  .contentwidth {
+    @apply max-w-short-length-sm md:max-w-short-length-lg;
+  }
+}
+
+/* Animations */
+/* Survay button animation */
+@keyframes float {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(4px);
+  }
+}
+
+@layer base {
+  .toolTipWhite {
+    @apply rounded-md border border-border-primary !bg-background-primary-inverse !px-4 !py-2 !text-primary shadow-md;
+  }
+}
+
+/* Assessment slides */
+.scrollArea {
+  @apply mt-4 py-4 md:mt-8 md:h-[calc(100dvh-200px)];
+}
+.fixedButtons {
+  @apply fixed bottom-0 left-0 md:absolute;
+  @apply w-full bg-white p-4 md:p-0;
+}
+
+/* Can be deleted later */
+.customcarousel > div {
+  height: 100%;
+}
+
+.cardTitle {
+  @apply font-semibold text-20 leading-7;
+}
+
+/* Strategic Initiative */
+.hideCloseButton > button {
+  @apply hidden;
+}
+
+.strategylists > div[data-radix-scroll-area-viewport] > div {
+  @apply h-full;
+}
